# diff-img2img

./: .gitignore  CHANGELOG.md  DeepTranserGAN.py  IMPROVEMENTS_SUMMARY.md  LICENCE  P0_P1_FIXES_REPORT.md  README.md  README_en.md  README_release.md  SOTA_IMPROVEMENTS_REPORT.md  TRAINING_GUIDE.md  TRAINING_LOGIC_REVIEW.md  accelerate_config.yaml  app.py  build.spec  build_executable.sh  darker.py  diffusion_predictor.py  diffusion_trainer.py  diffusion_val.py  eval.py  main.py  pyproject.toml  release.sh  requirements.txt  run_app.py  sample_extra.py  start_train.py  start_train.sh  train_test_notebook.ipynb  visual_val.py  worker.js
configs/train/: max.yaml  max_accum.yaml  middle.yaml  middle_accum.yaml  (+5 more)
core/: engine.py
datasets/: data_set.py  prepare_data.py
docs/: 8gb_throughput_workflow.md  torch_low_light_rewrite_plan.md
models/: base_mode.py  common.py  conditioning.py  diffusion.py  retinex.py
notebooks/: train_test_notebook.ipynb
run_diffusion_experiment/: train_ui_log.txt
scripts/: build_cityscapes_lol.py  compare_runs.py  darken_nuscenes.py  darker.py  eval.py  evaluate_8gb_throughput.py  export_cityscapes_hf.py  prepare_offline_enhancements.py  process_masked_dataset_semantic_night.py  rename.py  run_8gb_throughput.py  sample_extra.py  summarize_run.py  visual_val.py
tests/: test_checkpoint_loading.py  test_loss_weighting_scheme_alias.py  test_main.py  test_prepare_data_paths.py  test_prepared_cache_info.py  test_project_config.py  test_project_config_paths.py  test_release_hygiene.py  test_run_artifacts.py  test_runtime_backend.py  test_staged_lpips.py  test_train_launcher.py  test_validation_plan.py
ui/: app.py
utils/: checkpointing.py  cityscapes_hf.py  loss.py  masked_semantic_dataset.py  metrics.py  misc.py  misic.py  project_config.py  run_artifacts.py  runtime_backend.py  semantic_night_synthesis.py  torch_low_light_degrader.py  train_display.py  train_launcher.py  video_writer.py  workflow_utils.py
