[project]
name = "diff-img2img"
version = "0.1.0"
description = "Retinex-guided conditional diffusion pipeline for low-light image enhancement."
readme = "README.md"
requires-python = "==3.10.11"
dependencies = [
    # Core training stack
    "torch==2.7.0+cu118",
    "torchvision==0.22.0+cu118",
    "torchaudio==2.7.0+cu118",
    "torcheval",
    "accelerate==1.7.0",
    "diffusers==0.33.1",
    # Runtime + UI
    "numpy==2.1.2",
    "opencv-python==4.11.0.86",
    "pillow==11.0.0",
    "pyyaml==6.0.2",
    "psutil==7.0.0",
    "imageio==2.37.0",
    "matplotlib==3.10.3",
    "plotly==6.5.0",
    "pandas==2.3.3",
    "rich==14.0.0",
    "streamlit==1.51.0",
    "tensorboard==2.19.0",
    "lpips==0.1.4",
    "scikit-image==0.25.2",
    "scikit-video",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
